JDK 23, SB 3.4 + lots of changes...