@@ -8,7 +8,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>3.3.4</version>
+    <version>3.4.0</version>
     <!--    <groupId>org.springframework.cloud</groupId>-->
     <!--    <artifactId>spring-cloud-starter-parent</artifactId>-->
     <!--    <version>2023.0.3</version>-->
@@ -31,6 +31,14 @@
       <id>atlassian-public</id>
       <url>https://packages.atlassian.com/maven/repository/public</url>
     </repository>
+    <repository>
+      <id>spring-milestones</id>
+      <name>Spring Milestones</name>
+      <url>https://repo.spring.io/milestone</url>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+    </repository>
   </repositories>
 
   <properties>
@@ -38,12 +46,13 @@
     <!--region General-->
     <java.version>23</java.version>
     <minimal.maven.version>3.9.9</minimal.maven.version>
+    <!--suppress XmlUnresolvedReference -->
     <revision>${git-versioner.version}</revision>
     <!--endregion-->
 
     <!--region Bills of material (BOM)-->
-    <spring-boot.version>3.3.4</spring-boot.version>
-    <spring-cloud.version>2023.0.3</spring-cloud.version>
+    <spring-boot.version>3.4.0</spring-boot.version>
+    <spring-cloud.version>2024.0.0-RC1</spring-cloud.version>
     <!--endregion-->
 
     <!--region infrastructure-->
@@ -51,16 +60,16 @@
     <!--endregion-->
 
     <!--region Libs-->
-    <lombok.version>edge-SNAPSHOT</lombok.version>
-    <org-mapstruct.version>1.6.2</org-mapstruct.version>
-    <vavr.version>0.10.4</vavr.version>
+    <lombok.version>1.18.36</lombok.version>
+    <org-mapstruct.version>1.6.3</org-mapstruct.version>
+    <vavr.version>0.10.5</vavr.version>
     <jspecify.version>1.0.0</jspecify.version>
-    <checker.version>3.48.0</checker.version>
+    <checker.version>3.48.2</checker.version>
     <spotbugs.version>4.8.6</spotbugs.version>
-    <annotations.version>25.0.0</annotations.version>
+    <annotations.version>26.0.1</annotations.version>
     <jcip-annotations.version>1.0</jcip-annotations.version>
-    <springdoc-openapi.version>2.6.0</springdoc-openapi.version>
-    <error_prone_annotations.version>2.33.0</error_prone_annotations.version>
+    <springdoc-openapi.version>2.7.0</springdoc-openapi.version>
+    <error_prone_annotations.version>2.36.0</error_prone_annotations.version>
     <json.version>20240303</json.version>
     <poi.version>5.3.0</poi.version>
     <fugue.version>2.7.0</fugue.version>
@@ -75,10 +84,10 @@
     <maven.sourceDirectory>${project.basedir}/src/main/java</maven.sourceDirectory>
 
     <jacoco-maven-plugin.version>0.8.12</jacoco-maven-plugin.version>
-    <sonar-maven-plugin.version>4.0.0.4121</sonar-maven-plugin.version>
-    <spotbugs-maven-plugin.version>4.8.6.4</spotbugs-maven-plugin.version>
+    <sonar-maven-plugin.version>5.0.0.4389</sonar-maven-plugin.version>
+    <spotbugs-maven-plugin.version>4.8.6.6</spotbugs-maven-plugin.version>
     <yaml-properties-maven-plugin.version>1.1.3</yaml-properties-maven-plugin.version>
-    <openapi-generator-maven-plugin.version>7.8.0</openapi-generator-maven-plugin.version>
+    <openapi-generator-maven-plugin.version>7.10.0</openapi-generator-maven-plugin.version>
     <flatten-maven-plugin.version>1.6.0</flatten-maven-plugin.version>
 
     <assertj-assertions-generator-maven-plugin.version>2.2.0</assertj-assertions-generator-maven-plugin.version>
@@ -182,6 +191,18 @@
       </dependency>
       <!--endregion-->
 
+      <dependency>
+        <groupId>org.xmlunit</groupId>
+        <artifactId>xmlunit-core</artifactId>
+        <version>2.10.0</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.json</groupId>
+        <artifactId>json</artifactId>
+        <version>${json.version}</version>
+      </dependency>
+
     </dependencies>
   </dependencyManagement>
 
@@ -260,6 +281,11 @@
         </exclusion>
       </exclusions>
     </dependency>
+    <dependency>
+      <groupId>org.testcontainers</groupId>
+      <artifactId>postgresql</artifactId>
+      <scope>test</scope>
+    </dependency>
 
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -277,7 +303,6 @@
       <artifactId>spring-security-test</artifactId>
       <scope>test</scope>
     </dependency>
-    <!--suppress VulnerableLibrariesLocal -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-testcontainers</artifactId>
@@ -286,11 +311,6 @@
     <dependency>
       <groupId>org.testcontainers</groupId>
       <artifactId>junit-jupiter</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.testcontainers</groupId>
-      <artifactId>postgresql</artifactId>
       <scope>test</scope>
     </dependency>
 
@@ -352,8 +372,8 @@
     <dependency>
       <groupId>org.json</groupId>
       <artifactId>json</artifactId>
-      <version>${json.version}</version>
     </dependency>
+
   </dependencies>
 
   <build>
@@ -379,6 +399,7 @@
               <arg>-Xlint:all,-serial,-processing</arg> <!--Включает все рекомендуемые предупреждения.-->
               <arg>-Awarns</arg>  <!--CI: падать при наличии проблем -->
               <!--<arg>-Astubs=jdk.astub</arg>-->
+              <arg>-J--add-exports=java.base/sun.security.ssl=ALL-UNNAMED</arg>
               <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
               <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
               <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
@@ -430,9 +451,7 @@
           </configuration>
         </plugin>
         <plugin>
-          <!--suppress MybatisXMapperXmlInspection -->
           <artifactId>maven-surefire-plugin</artifactId>
-          <!--suppress MybatisXMapperXmlInspection -->
           <version>${maven-surefire-plugin.version}</version>
           <configuration>
             <!--See: https://dzone.com/articles/using-jdk21-preview-features-andor-incubator-class-->
@@ -454,9 +473,7 @@
         </plugin>
 
         <plugin>
-          <!--suppress MybatisXMapperXmlInspection -->
           <artifactId>maven-source-plugin</artifactId>
-          <!--suppress MybatisXMapperXmlInspection -->
           <version>${maven-source-plugin.version}</version>
           <executions>
             <execution>
@@ -623,9 +640,7 @@
           </executions>
         </plugin>
         <plugin>
-          <!--suppress MybatisXMapperXmlInspection -->
           <artifactId>maven-javadoc-plugin</artifactId>
-          <!--suppress MybatisXMapperXmlInspection -->
           <version>${maven-javadoc-plugin.version}</version>
           <configuration>
             <release>${java.version}</release>
@@ -643,9 +658,7 @@
           </executions>
         </plugin>
         <plugin>
-          <!--suppress MybatisXMapperXmlInspection -->
           <artifactId>maven-enforcer-plugin</artifactId>
-          <!--suppress MybatisXMapperXmlInspection -->
           <version>${maven-enforcer-plugin.version}</version>
           <executions>
             <execution>
